application/splash-page/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: splash-page
  namespace: application
spec:
  selector:
    app: splash-page
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
